# Production-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  mcp_server.py  mcp_tools.py
app/agent/: graph.py  nodes.py  parsers.py  prompts.py  state.py
app/api/: deps.py  routes_agent.py  routes_chat.py  routes_ingest.py
app/core/: cache.py  condense.py  factories.py  pipeline.py  prompts.py
app/graph/: builder.py  store.py
app/guardrails/: injection.py  pii.py  service.py  toxicity.py
app/ingestion/: chunkers.py  embedder.py  loaders.py  validation.py
app/observability/: cost.py  logging.py  tracing.py
app/reranker/: reranker.py
app/retrieval/: bm25_store.py  graph_retriever.py  hybrid_retriever.py  opensearch_store.py  query_transform.py  vector_store.py
docs/: CASE_STUDY.md
docs/plans/: 2026-04-25-production-rag-design.md  2026-04-25-production-rag-plan.md
evaluation/: README.md  _compat.py  backfill_keyword_index.py  eval_dataset.json  ingest_corpus.py  metrics.py  multiturn_dataset.json  run_ablation.py  run_eval.py  run_multiturn.py
evaluation/corpus/: download_papers.py
evaluation/results/: 20260622T030819Z_ablation.json  20260622T030819Z_ablation.md  20260622T031841Z_basic.json  20260622T032746Z_grounded.json  20260622T035959Z_basic.json  20260622T041009Z_grounded.json  20260708T190359Z_ablation_base6.json  20260708T190359Z_ablation_base6.md  20260708T224030Z_ablation_scale30.json  20260708T224030Z_ablation_scale30.md  20260708T231722Z_grounded_scale30.json  20260710T180833Z_ablation_latency-before-base6.json  20260710T180833Z_ablation_latency-before-base6.md  20260710T181304Z_ablation_latency-before-scale30.json  20260710T181304Z_ablation_latency-before-scale30.md  20260710T185344Z_ablation_latency-after-base6.json  20260710T185344Z_ablation_latency-after-base6.md  20260710T185555Z_ablation_latency-after-scale30.json  20260710T185555Z_ablation_latency-after-scale30.md  20260710T190025Z_latency.md  20260712T014325Z_multiturn.md  (+8 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tests/: conftest.py  test_agent_api.py  test_agent_graph.py  test_agent_nodes.py  test_agent_parsers.py  test_api.py  test_api_upload.py  test_backfill_keyword_index.py  test_bm25_store.py  test_cache.py  test_cache_redis.py  test_chunkers.py  test_condense.py  test_config.py  test_cost.py  test_deps.py  test_embedder.py  test_eval_metrics.py  test_eval_stats.py  test_factories.py  test_graph.py  test_graph_retriever.py  test_guardrails_injection.py  test_guardrails_pii.py  test_guardrails_service.py  test_guardrails_toxicity.py  test_hybrid_retriever.py  test_ingest_validation.py  test_loaders.py  test_main.py  test_mcp_server.py  test_mcp_tools.py  test_opensearch_store.py  test_pipeline.py  test_prompts.py  test_query_transform.py  test_reranker.py  test_run_multiturn.py  test_tracing.py  test_vector_store.py
ui/: streamlit_app.py
(+70 files in other folders)
