[project]
name = "production-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "networkx>=3.4.0",
    "cohere>=5.13.0",
    "langchain-cohere>=0.3.0",
    "langsmith>=0.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "pypdf>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "spacy>=3.8.0",
    "ragas>=0.2.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "slowapi>=0.1.9",
    "structlog>=24.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
